--- a/templates/enroll.html
+++ b/templates/enroll.html
@@ -89,7 +89,7 @@
                           {% for  p in Membership %}
                           
 
-<option value="{{p.plan}} - {{p.price}}">{{p.plan}} - {{p.price}} Rs</option>
+<option value="{{p.plan}} - {{p.price}}">{{p.plan}} - {{p.price}} €</option>
 {% endfor %}
 
 </select>
