--- a/static/admin/css/autocomplete.css
+++ b/static/admin/css/autocomplete.css
@@ -1,4 +1,4 @@
-select.admin-autocomplete {
+/* select.admin-autocomplete {
     width: 20em;
 }
 
@@ -272,4 +272,4 @@ select.admin-autocomplete {
     cursor: default;
     display: block;
     padding: 6px;
-}
+} */
